<resources>
    <string name="app_name">Pop Movies K</string>
    <string name="no_internet_msg">No internet connection</string>
    <string name="connection_error_title">Connection error</string>
    <string name="ok_button">OK</string>
    <string name="ordey_by_popularity">Order By Popularity</string>
    <string name="order_by_rating">Order By Rating</string>
    <string name="rating_title">Rating</string>
    <string name="year_title">Year</string>
    <string name="original_title">Original Title</string>
    <string name="movie_details_title">Movie Details</string>
    <string name="dummy_date_text">00/00/000</string>
    <string name="item_detail_synopse_text">Sinopse</string>
    <string name="item_detail_name_text">Name</string>
</resources>
