<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize">

  <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      android:fitsSystemWindows="true">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapse_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="@dimen/item_detail_collapsing_title_margin_start"
        app:expandedTitleMarginEnd="@dimen/item_detail_collapsing_title_margin_end"
        android:background="@color/black"
        android:fitsSystemWindows="true">

      <ImageView
          android:id="@+id/collapse_image"
          android:layout_width="match_parent"
          android:layout_height="@dimen/item_detail_imageview_layout_height"
          android:scaleType="centerCrop"
          android:fitsSystemWindows="true"
          android:contentDescription=""
          app:layout_collapseMode="parallax"/>

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
          app:layout_collapseMode="pin"
          app:expandedTitleGravity="bottom|center_horizontal"/>

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:background="@color/black"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/item_detail_nested_linear_padding">

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_item_image"
            android:layout_width="@dimen/item_detail_poster_width"
            android:layout_height="@dimen/item_detail_poster_height"
            android:contentDescription=""
            android:src="@drawable/no_image"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_detail_linear_margin_left">

          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_detail_original_title_text_size"/>

            <TextView
                android:id="@+id/original_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_name_text"
                android:textColor="@color/white"
                android:textSize="@dimen/item_detail_movie_text_size"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_detail_movie_content_text_size"/>

            <TextView
                android:id="@+id/release_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_date_text"
                android:textColor="@color/white"
                android:textSize="@dimen/item_detail_movie_date_text_size"
                android:layout_marginBottom="@dimen/item_detail_movie_date_margin_bottom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/item_detail_rating_title_text_size"/>


            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_detail_ratingbar_margin_top"
                android:theme="@style/RatingBar"
                android:numStars="5"
                android:stepSize="0.0"
                android:rating="5.0"
                style="?android:attr/ratingBarStyleSmall"/>
          </LinearLayout>
        </LinearLayout>

      </LinearLayout>
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/item_detail_linear_synopse_margin_top">

        <TextView
            android:id="@+id/synopse_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_synopse_text"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/movie_item_image"
            android:textSize="@dimen/item_detail_sypnose_text_size"/>

      </LinearLayout>

    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
